fixed white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,17 +11,16 @@
 
 body {
     background-color: #EA8CFF;
-    max-height: 100%;
+    height: 100%;
 }
 
 #popular-genres {
-    display: flex;
     background-color: lightskyblue;
 }
 
 .wrapper2 {
     width: 75%;
-    height: 500px;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -48,6 +47,7 @@ body {
 
  .container {
     width: 100%;
+    height: 100%;
     display: flex;
     /* justify-content: space-between; */
 
